--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap');
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -83,6 +85,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  
 }
 
 body {
@@ -93,7 +96,9 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+    font-family: 'Sunflower', sans-serif;
+   
+  }
 
 a {
   color: inherit;
@@ -104,4 +109,43 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+.button-pink {
+  background-image: url('/button-pink.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  padding: 30px;
+}
+
+.button-green {
+  background-image: url('/button-green.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  padding: 30px;
+}
+
+.flames-bg {
+  background-image: url('/flame-bg.svg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  padding-top: 220px;
+  height: 1550px;
+}
+
+
+.shadow-outline-white {
+  box-shadow: 0 0 20px #ffffff;
+}
+
+.testominals{
+  background: #37474F;
 }
